# xsd-rs

./: .travis.yml  Cargo.toml  LICENSE_MIT.md  README.md  aliases.js  index.html  search-index.js  settings.html  source-files.js
proc_macro2/: struct.TokenStream.html
syn/: enum.Fields.html  enum.GenericMethodArgument.html  enum.RangeLimits.html  struct.Arm.html  struct.Error.html  struct.ExprArray.html  struct.ExprAssign.html  struct.ExprAssignOp.html  struct.ExprAsync.html  struct.ExprAwait.html  struct.ExprBinary.html  struct.ExprBlock.html  struct.ExprBox.html  struct.ExprBreak.html  struct.ExprCall.html  struct.ExprCast.html  struct.ExprClosure.html  struct.ExprContinue.html  struct.ExprField.html  struct.ExprForLoop.html  struct.ExprGroup.html  struct.ExprIf.html  struct.ExprIndex.html  struct.ExprLet.html  struct.ExprLoop.html  struct.ExprMacro.html  struct.ExprMatch.html  struct.ExprMethodCall.html  struct.ExprParen.html  struct.ExprRange.html  struct.ExprReference.html  struct.ExprRepeat.html  struct.ExprReturn.html  struct.ExprTry.html  (+12 more)
xsd/: Cargo.toml  all.html  enum.ComplexType.html  enum.ElementType.html  enum.ParseError.html  fn.parse.html  fn.parse_from_reader.html  index.html  sidebar-items.js  struct.Element.html  struct.Schema.html  struct.Sequence.html
xsd/errors/: enum.ParseError.html
xsd/parse/: fn.parse_from_reader.html
xsd/src/: errors.rs  lib.rs  parse.rs  types.rs
xsd/tests/: examples.rs
xsd/tests/data/: note.xsd
xsd/types/: enum.ComplexType.html  enum.ElementType.html  struct.Element.html  struct.Schema.html  struct.Sequence.html
(+98 files in other folders)
